--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <main id="main">
 
-    <!-- Clients Section -->
+    <!-- Clients Section
     <section id="clients" class="clients clients">
       <div class="container">
 
@@ -110,7 +110,7 @@
         </div>
 
       </div>
-    </section><!-- END : Clients Section -->
+    </section>END : Clients Section -->
 
     <!-- Section Projet -->
     <section id="projet" class="projet">
@@ -306,7 +306,7 @@
             <div class="card" style='background-image: url("assets/img/prix.jpg");' data-aos="fade-up" data-aos-delay="200">
               <div class="card-body">
                 <h5 class="card-title"><a>Prix :</a></h5>
-                <p class="card-text" style="text-align: center;">300 €</p>
+                <p class="card-text" style="text-align: center;">300 € TTC</p>
               </div>
             </div>
           </div>
