--- a/condition.html
+++ b/condition.html
@@ -94,7 +94,7 @@ Author : MARDAY Sendinee
                   Dans les paragraphes qui suivent, il est convenu de désigner par :<br>
                   - client : toute personne physique ou morale qui s’inscrit ou passe commande d’une formation auprès de la
                   société FORMA SMART<br>
-                  - stagiaire : la personne physique qui participe à une formation.<br>
+                  - stagiaire : la personne physique qui participe à une formation.(Accès à son espace extranet pendant 1 mois)<br>
                   - CGV : les conditions générales de vente, détaillées ci-dessous.<br>
                   - OPCO : les opérateurs de compétence agréés chargés de collecter et gérer l’effort de formation des
                   entreprises.
