--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <h2 data-aos="fade-up" data-aos-delay="400">Cette formation est un v&#233;ritable tremplin pour votre entreprise. En effet, vous allez y apprendre le B-A BA de la gestion d'un projet agile.</h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="index.html#information" class="btn-get-started scrollto">En savoir +</a>
-            <a href="https://eu.docworkspace.com/d/sIBGOuLw-4umukAY" class="btn-get-started scrollto">Télécharger la formation</a>
+            <a href="assets/programme_gerer_un_projet_scrum_sendinee.pdf" class="btn-get-started scrollto">Télécharger la formation</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left" data-aos-delay="200">
@@ -166,7 +166,7 @@
                   <div class="count-box">
                     <i class="bi bi-award"></i>
                     <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
-                    <p><strong>TAUX DE REPONSE</strong></p>
+                    <p><strong>TAUX DE RÉUSSITE</strong></p>
                   </div>
                 </div><!-- END : col-md-6 d-md-flex align-items-md-stretch -->
               </div><!-- END : .row-->
@@ -477,3 +477,4 @@
 </body>
 
 </html>
+
