--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a class="nav-link scrollto" href="#projet">Projet</a></li>
           <li><a class="nav-link scrollto" href="#contenu">Contenu</a></li>
           <li><a class="nav-link scrollto" href="#information">Information Compl&#233;mentaire</a></li>
+          <li><a class="nav"></a></li>
           <li><a class="nav-link scrollto" href="#equipe">&#201;quipe P&#233;dagogique</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
@@ -477,4 +478,5 @@
 </body>
 
 </html>
+
 
